--- a/project.json
+++ b/project.json
@@ -2,7 +2,7 @@
   "name": "dashboard",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "app",
+  "prefix": "nova",
   "sourceRoot": "./src",
   "tags": [],
   "targets": {
@@ -22,7 +22,12 @@
             "input": "public"
           }
         ],
-        "styles": ["./src/styles.scss"],
+        "styles": [
+          "node_modules/primeng/resources/themes/saga-blue/theme.css",
+          "node_modules/primeng/resources/primeng.min.css",
+          "node_modules/primeicons/primeicons.css",
+          "./src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
